everything better now

--- a/_includes/language.html
+++ b/_includes/language.html
@@ -3,6 +3,6 @@
 <ul class="list-unstyled interests-list">
 <li>English <span class="lang-desc">(Fluent)</span></li>
 <li>Russian <span class="lang-desc">(Native)</span></li>
-<li>German <span class="lang-desc">(Professional)</span></li>
+<li>German <span class="lang-desc">(Advanced)</span></li>
 </ul>
 </div><!--//interests-->
