--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,12 +2,12 @@
 <h2 class="container-block-title">Education</h2>
 <div class="item">
     <h4 class="degree">MSc in Computer Science</h4>
-    <h5 class="meta">Dresden University of Technology, Germany</h5>
+    <h5 class="meta">TU Dresden, Germany</h5>
     <div class="time">2011 - 2013</div>
 </div><!--//item-->
 <div class="item">
     <h4 class="degree">Diplom in Electrical Engineering</h4>
-    <h5 class="meta">Bauman Moscow State Technical University, Russia</h5>
+    <h5 class="meta">Bauman University, Russia</h5>
     <div class="time">2004 - 2010</div>
 </div><!--//item-->
 </div><!--//education-container-->
