--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,76 +2,80 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
 
                 <div class="intro">
-                    <p>Conference papers.</p>
+                    <h4>Conference papers</h4>
                 </div><!--//intro-->
 
                 <div class="item">
-                    <p>Intel MPX Explained, USENIX ATC 2017. <i>(Under submission)</i>
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
-                    <span class="project-title"><a href="#hook">Code</a></span>
+                    <p>Intel MPX Explained, USENIX ATC 2017.
                     <br>
                     Oleksii Oleksenko, <b>Dmitrii Kuvaiskii</b>, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <br>
+                    <span class="project-title">Under submission</span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>SGXBounds: Memory Safety for Shielded Execution, EuroSys 2017. <i>(Under submission)</i>
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
-                    <span class="project-title"><a href="#hook">Code</a></span>
+                    <p>SGXBounds: Memory Safety for Shielded Execution, EuroSys 2017.
                     <br>
                     <b>Dmitrii Kuvaiskii</b>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <br>
+                    <span class="project-title">Under submission</span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
                     <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions, DSN 2016.
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
-                    <span class="project-title"><a href="#hook">Code</a></span>
                     <br>
                     <b>Dmitrii Kuvaiskii</b>, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <br>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzarTechReport.pdf">[Techreport]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016elzar.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://github.com/tudinfse/elzar">[Code]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
                     <p>HAFT: Hardware-Assisted Fault Tolerance, EuroSys 2016.
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
-                    <span class="project-title"><a href="#hook">Code</a></span>
                     <br>
                     <b>Dmitrii Kuvaiskii</b>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <br>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016HAFT.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://github.com/tudinfse/haft">[Code]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
                     <p>&Delta;-Encoding: Practical Encoded Processing, DSN 2015. <i>Carter Award (best student paper)</i>
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
                     <br>
                     <b>Dmitrii Kuvaiskii</b> and Christof Fetzer
+                    <br>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/DELTAENC.pdf">[Slides]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
                     <p>HardPaxos: Replication hardened against hardware errors, SRDS 2014. <i>Best paper award</i>
-                    <span class="project-title"><a href="#hook">Paper</a></span>
-                    <span class="project-title"><a href="#hook">Slides</a></span>
                     <br>
                     Diogo Behrens, <b>Dmitrii Kuvaiskii</b>, and Christof Fetzer
+                    <br>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/BKF14.pdf">[Paper]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="intro">
-                    <p>Extended Abstracts.</p>
+                    <h4>Misc</h4>
                 </div><!--//intro-->
 
                 <div class="item">
                     <p>Efficient Fault Tolerance using Intel MPX and TSX, DSN 2016. <i>(Fast abstract)</i>
-                    <span class="project-title"><a href="#hook">Paper</a></span>
                     <br>
                     Oleksii Oleksenko, <b>Dmitrii Kuvaiskii</b>, Pramod Bhatotia, Christof Fetzer, and Pascal Felber
+                    <br>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Oleksenko2016dsnFastAbstract.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Oleksenko2016dsnFastAbstract.pdf">[Slides]</a></span>
                     </p>
                 </div><!--//item-->
 
