--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,28 +5,32 @@
                     <h4>Conference papers</h4>
                 </div><!--//intro-->
 
+                <!--
                 <div class="item">
                     <p>Intel MPX Explained, USENIX ATC 2017.
                     <br>
-                    Oleksii Oleksenko, <b>Dmitrii Kuvaiskii</b>, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <span class="project-title">Under submission</span>
                     </p>
-                </div><!--//item-->
+                </div>
+                -->
 
+                <!--
                 <div class="item">
                     <p>SGXBounds: Memory Safety for Shielded Execution, EuroSys 2017.
                     <br>
-                    <b>Dmitrii Kuvaiskii</b>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <span class="project-title">Under submission</span>
                     </p>
-                </div><!--//item-->
+                </div>
+                -->
 
                 <div class="item">
-                    <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions, DSN 2016.
+                    <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions, <b>DSN 2016</b>.
                     <br>
-                    <b>Dmitrii Kuvaiskii</b>, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzarTechReport.pdf">[Techreport]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf">[Paper]</a></span>
@@ -36,9 +40,9 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>HAFT: Hardware-Assisted Fault Tolerance, EuroSys 2016.
+                    <p>HAFT: Hardware-Assisted Fault Tolerance, <b>EuroSys 2016</b>.
                     <br>
-                    <b>Dmitrii Kuvaiskii</b>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
+                    <i>Dmitrii Kuvaiskii</i>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016HAFT.pdf">[Slides]</a></span>
@@ -47,9 +51,9 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>&Delta;-Encoding: Practical Encoded Processing, DSN 2015. <i>Carter Award (best student paper)</i>
+                    <p>&Delta;-Encoding: Practical Encoded Processing, <b>DSN 2015</b>. <i>Carter Award (best student paper)</i>
                     <br>
-                    <b>Dmitrii Kuvaiskii</b> and Christof Fetzer
+                    <i>Dmitrii Kuvaiskii</i> and Christof Fetzer
                     <br>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/DELTAENC.pdf">[Slides]</a></span>
@@ -57,9 +61,9 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>HardPaxos: Replication hardened against hardware errors, SRDS 2014. <i>Best paper award</i>
+                    <p>HardPaxos: Replication hardened against hardware errors, <b>SRDS 2014</b>. <i>Best paper award</i>
                     <br>
-                    Diogo Behrens, <b>Dmitrii Kuvaiskii</b>, and Christof Fetzer
+                    Diogo Behrens, <i>Dmitrii Kuvaiskii</i>, and Christof Fetzer
                     <br>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/BKF14.pdf">[Paper]</a></span>
                     </p>
@@ -70,9 +74,9 @@
                 </div><!--//intro-->
 
                 <div class="item">
-                    <p>Efficient Fault Tolerance using Intel MPX and TSX, DSN 2016. <i>(Fast abstract)</i>
+                    <p>Efficient Fault Tolerance using Intel MPX and TSX, <b>DSN 2016</b>. <i>(Fast abstract)</i>
                     <br>
-                    Oleksii Oleksenko, <b>Dmitrii Kuvaiskii</b>, Pramod Bhatotia, Christof Fetzer, and Pascal Felber
+                    Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Christof Fetzer, and Pascal Felber
                     <br>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Oleksenko2016dsnFastAbstract.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Oleksenko2016dsnFastAbstract.pdf">[Slides]</a></span>
