--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,3 +1,4 @@
+<!--
 <div class="languages-container container-block">
 <h2 class="container-block-title">Languages</h2>
 <ul class="list-unstyled interests-list">
@@ -5,4 +6,5 @@
 <li>Russian <span class="lang-desc">(Native)</span></li>
 <li>German <span class="lang-desc">(Advanced)</span></li>
 </ul>
-</div><!--//interests-->
+</div>
+-->
