--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,10 +28,11 @@
                 -->
 
                 <div class="item">
-                    <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions, <b>DSN 2016</b>.
+                    <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions
                     <br>
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
+                    <b>DSN 2016</b>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzarTechReport.pdf">[Techreport]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016elzar.pdf">[Slides]</a></span>
@@ -40,10 +41,11 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>HAFT: Hardware-Assisted Fault Tolerance, <b>EuroSys 2016</b>.
+                    <p>HAFT: Hardware-Assisted Fault Tolerance
                     <br>
                     <i>Dmitrii Kuvaiskii</i>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
+                    <b>DSN 2016</b>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016HAFT.pdf">[Slides]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/haft">[Code]</a></span>
@@ -51,20 +53,22 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>&Delta;-Encoding: Practical Encoded Processing, <b>DSN 2015</b>. <i>Carter Award (best student paper)</i>
+                    <p>&Delta;-Encoding: Practical Encoded Processing
                     <br>
                     <i>Dmitrii Kuvaiskii</i> and Christof Fetzer
                     <br>
+                    <b>DSN 2015</b>, <span style="color:#B40404"><i>Carter Award (best student paper)</i></span>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/DELTAENC.pdf">[Slides]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="item">
-                    <p>HardPaxos: Replication hardened against hardware errors, <b>SRDS 2014</b>. <i>Best paper award</i>
+                    <p>HardPaxos: Replication hardened against hardware errors
                     <br>
                     Diogo Behrens, <i>Dmitrii Kuvaiskii</i>, and Christof Fetzer
                     <br>
+                    <b>SRDS 2014</b>. <span style="color:#B40404"><i>Best paper award</i></span>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/BKF14.pdf">[Paper]</a></span>
                     </p>
                 </div><!--//item-->
@@ -74,10 +78,11 @@
                 </div><!--//intro-->
 
                 <div class="item">
-                    <p>Efficient Fault Tolerance using Intel MPX and TSX, <b>DSN 2016</b>. <i>(Fast abstract)</i>
+                    <p>Efficient Fault Tolerance using Intel MPX and TSX
                     <br>
                     Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Christof Fetzer, and Pascal Felber
                     <br>
+                    <b>DSN 2016</b>. <i>(Fast abstract)</i>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Oleksenko2016dsnFastAbstract.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Oleksenko2016dsnFastAbstract.pdf">[Slides]</a></span>
                     </p>
