--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,7 +45,7 @@
                     <br>
                     <i>Dmitrii Kuvaiskii</i>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
-                    <b>DSN 2016</b>&nbsp;
+                    <b>EuroSys 2016</b>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016HAFT.pdf">[Slides]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/haft">[Code]</a></span>
