_includes/projects.html: added SGXBounds and Fex

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -16,16 +16,25 @@
                 </div>
                 -->
 
-                <!--
                 <div class="item">
-                    <p>SGXBounds: Memory Safety for Shielded Execution, EuroSys 2017.
+                    <p>Fex: A Software Systems Evaluator
+                    <br>
+                    Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, and Christof Fetzer
+                    <br>
+                    <b>DSN 2017</b>&nbsp;
+                    <span class="project-title">[To appear]</span>
+                    </p>
+                </div>
+
+                <div class="item">
+                    <p>SGXBounds: Memory Safety for Shielded Execution
                     <br>
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
-                    <span class="project-title">Under submission</span>
+                    <b>Eurosys 2017</b>&nbsp;
+                    <span class="project-title">[To appear]</span>
                     </p>
                 </div>
-                -->
 
                 <div class="item">
                     <p>Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions
