--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -32,7 +32,9 @@
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <b>Eurosys 2017</b>&nbsp;
-                    <span class="project-title">[To appear]</span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/sgxbounds2017.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/sgxbounds2017.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://github.com/tudinfse/sgxbounds">[Code]</a></span>
                     </p>
                 </div>
 
