new CV; mention Eurosys17 award

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
                     <br>
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
-                    <b>Eurosys 2017</b>&nbsp;
+                    <b>Eurosys 2017</b>, <span style="color:#B40404"><i>Best paper award</i></span>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/sgxbounds2017.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/sgxbounds2017.pdf">[Slides]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/sgxbounds">[Code]</a></span>
@@ -68,7 +68,7 @@
                     <br>
                     <i>Dmitrii Kuvaiskii</i> and Christof Fetzer
                     <br>
-                    <b>DSN 2015</b>, <span style="color:#B40404"><i>Carter Award (best student paper)</i></span>&nbsp;
+                    <b>DSN 2015</b>, <span style="color:#B40404"><i>Carter award (best student paper)</i></span>&nbsp;
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf">[Paper]</a></span>
                     <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/DELTAENC.pdf">[Slides]</a></span>
                     </p>
