added Intel Labs; added Fex

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -22,7 +22,8 @@
                     Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, and Christof Fetzer
                     <br>
                     <b>DSN 2017</b>&nbsp;
-                    <span class="project-title">[To appear]</span>
+                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/fex2017.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="https://github.com/tudinfse/fex">[Code]</a></span>
                     </p>
                 </div>
 
