--- a/_includes/carrier-profile.html
+++ b/_includes/carrier-profile.html
@@ -8,5 +8,6 @@
 <div class="summary">
     <p> I am a fourth-year PhD student at TU Dresden co-supervised by Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia. My research interests lie in the field of dependability of software systems, with a particular focus on fault tolerance and security.</p>
     <p>Before joining TU Dresden, I worked as a software engineer at Auriga Inc (2010 &mdash; 2011) and Diasoft (2007 &mdash; 2010) in Moscow.</p>
+    <p>During my PhD, I interned with Intel Labs at Hillsboro, OR, USA.</p>
 </div><!--//summary-->
 </section><!--//section-->
