updated papers and bio

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,16 +5,17 @@
                     <h4>Conference papers</h4>
                 </div><!--//intro-->
 
-                <!--
                 <div class="item">
-                    <p>Intel MPX Explained, USENIX ATC 2017.
+                    <p>Intel MPX Explained: An Empirical Study of Intel MPX and Software-based Bounds Checking Approaches
                     <br>
                     Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
-                    <span class="project-title">Under submission</span>
+                    <b>Sigmetrics 2018</b>&nbsp;
+                    <span class="project-title"><a href="https://arxiv.org/pdf/1702.00719v1.pdf">[Techreport]</a></span>
+                    <span class="project-title"><a href="https://intel-mpx.github.io/">[Site]</a></span>
+                    <span class="project-title"><a href="https://github.com/tudinfse/intel_mpx_explained">[Code]</a></span>
                     </p>
                 </div>
-                -->
 
                 <div class="item">
                     <p>Fex: A Software Systems Evaluator
