--- a/_includes/carrier-profile.html
+++ b/_includes/carrier-profile.html
@@ -6,9 +6,9 @@
 -->
 
 <div class="summary">
-    <p> I am a fourth-year PhD student at TU Dresden co-supervised by Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia. My research interests lie in the field of dependability of software systems, with a particular focus on fault tolerance and security.</p>
+    <p>I currently work at Intel Labs in Hillsboro, OR.</p>
+    <p>Prior to joining Intel, I was a PhD student at TU Dresden co-supervised by Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia. During my PhD, I interned with Intel Labs (summer 2017). My research focused on dependability of software systems, with emphasis on fault tolerance and security. I defended my PhD thesis titled "Hardware-Assisted Dependable Systems" in early 2018.</p>
+    <p></p>
     <p>Before joining TU Dresden, I worked as a software engineer at Auriga Inc (2010 &mdash; 2011) and Diasoft (2007 &mdash; 2010) in Moscow.</p>
-    <p>During my PhD, I interned with Intel Labs at Hillsboro, OR, USA (summer of 2017).</p>
-    <p>I will finish my PhD in early 2018. The topic of my PhD thesis is "Dependable Systems Leveraging New ISA Extensions".</p>
 </div><!--//summary-->
 </section><!--//section-->
