--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,8 +2,38 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
 
                 <div class="intro">
+                    <h4>Talks</h4>
+                </div><!--//intro-->
+
+                <div class="item">
+                    <p>Gramine Library OS: Overview, current state and future plans
+                    <br>
+                    <b>FOSDEM 2022</b>&nbsp;
+                    <span class="project-title"><a href="https://archive.fosdem.org/2022/schedule/event/tee_gramine/">[Video]</a></span>
+                    </p>
+                </div><!--//item-->
+
+                <div class="item">
+                    <p>Graphene Library OS: Running unmodified applications in SGX enclaves
+                    <br>
+                    <b>FOSDEM 2021</b>&nbsp;
+                    <span class="project-title"><a href="https://archive.fosdem.org/2021/schedule/event/tee_graphene/">[Video]</a></span>
+                    </p>
+                </div><!--//item-->
+
+                <div class="intro">
                     <h4>Conference papers</h4>
                 </div><!--//intro-->
+
+                <div class="item">
+                    <p>Scaling Intel Software Guard Extensions applications with Intel® SGX Card
+                    <br>
+                    Somnath Chakrabarti, Matthew Hoekstra, <i>Dmitrii Kuvaiskii</i>, and Mona Vij
+                    <br>
+                    <b>HASP 2019</b>&nbsp;
+                    <span class="project-title"><a href="https://dl.acm.org/doi/abs/10.1145/3337167.3337173">[Paper]</a></span>
+                    </p>
+                </div>
 
                 <div class="item">
                     <p>Intel MPX Explained: An Empirical Study of Intel MPX and Software-based Bounds Checking Approaches
@@ -11,20 +41,10 @@
                     Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <b>Sigmetrics 2018</b>&nbsp;
+                    <span class="project-title"><a href="https://dl.acm.org/doi/10.1145/3292040.3219662">[Paper]</a></span>
                     <span class="project-title"><a href="https://arxiv.org/pdf/1702.00719v1.pdf">[Techreport]</a></span>
                     <span class="project-title"><a href="https://intel-mpx.github.io/">[Site]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/intel_mpx_explained">[Code]</a></span>
-                    </p>
-                </div>
-
-                <div class="item">
-                    <p>Fex: A Software Systems Evaluator
-                    <br>
-                    Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, and Christof Fetzer
-                    <br>
-                    <b>DSN 2017</b>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/fex2017.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="https://github.com/tudinfse/fex">[Code]</a></span>
                     </p>
                 </div>
 
@@ -34,8 +54,7 @@
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <b>Eurosys 2017</b>, <span style="color:#B40404"><i>Best paper award</i></span>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/sgxbounds2017.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/sgxbounds2017.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://dl.acm.org/doi/10.1145/3064176.3064192">[Paper]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/sgxbounds">[Code]</a></span>
                     </p>
                 </div>
@@ -46,9 +65,7 @@
                     <i>Dmitrii Kuvaiskii</i>, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <b>DSN 2016</b>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzarTechReport.pdf">[Techreport]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016elzar.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://ieeexplore.ieee.org/abstract/document/7579780">[Paper]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/elzar">[Code]</a></span>
                     </p>
                 </div><!--//item-->
@@ -59,8 +76,7 @@
                     <i>Dmitrii Kuvaiskii</i>, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and Christof Fetzer
                     <br>
                     <b>EuroSys 2016</b>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Kuvaiskii2016HAFT.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://dl.acm.org/doi/10.1145/2901318.2901339">[Paper]</a></span>
                     <span class="project-title"><a href="https://github.com/tudinfse/haft">[Code]</a></span>
                     </p>
                 </div><!--//item-->
@@ -71,8 +87,7 @@
                     <i>Dmitrii Kuvaiskii</i> and Christof Fetzer
                     <br>
                     <b>DSN 2015</b>, <span style="color:#B40404"><i>Carter award (best student paper)</i></span>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/DELTAENC.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://ieeexplore.ieee.org/document/7266834">[Paper]</a></span>
                     </p>
                 </div><!--//item-->
 
@@ -82,24 +97,30 @@
                     Diogo Behrens, <i>Dmitrii Kuvaiskii</i>, and Christof Fetzer
                     <br>
                     <b>SRDS 2014</b>. <span style="color:#B40404"><i>Best paper award</i></span>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/BKF14.pdf">[Paper]</a></span>
+                    <span class="project-title"><a href="https://ieeexplore.ieee.org/document/6983398">[Paper]</a></span>
                     </p>
                 </div><!--//item-->
 
                 <div class="intro">
-                    <h4>Misc</h4>
+                    <h4>ArXiv papers</h4>
                 </div><!--//intro-->
 
                 <div class="item">
-                    <p>Efficient Fault Tolerance using Intel MPX and TSX
+                    <p>Computation offloading to hardware accelerators in intel SGX and Gramine library OS
                     <br>
-                    Oleksii Oleksenko, <i>Dmitrii Kuvaiskii</i>, Pramod Bhatotia, Christof Fetzer, and Pascal Felber
+                    <i>Dmitrii Kuvaiskii</i>, Gaurav Kumar, and Mona Vij
                     <br>
-                    <b>DSN 2016</b>. <i>(Fast abstract)</i>&nbsp;
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/papers/Oleksenko2016dsnFastAbstract.pdf">[Paper]</a></span>
-                    <span class="project-title"><a href="http://se.inf.tu-dresden.de/pubs/slides/Oleksenko2016dsnFastAbstract.pdf">[Slides]</a></span>
+                    <span class="project-title"><a href="https://arxiv.org/ftp/arxiv/papers/2203/2203.01813.pdf">[Paper]</a></span>
                     </p>
                 </div><!--//item-->
 
+                <div class="item">
+                    <p>Snort intrusion detection system with Intel Software Guard Extensions (Intel SGX)
+                    <br>
+                    <i>Dmitrii Kuvaiskii</i>, Somnath Chakrabarti, and Mona Vij
+                    <br>
+                    <span class="project-title"><a href="https://arxiv.org/ftp/arxiv/papers/1802/1802.00508.pdf">[Paper]</a></span>
+                    </p>
+                </div><!--//item-->
 
             </section><!--//section-->
