Add AWS as new employer
Signed-off-by: Dmitrii Kuvaiskii <dimakuv@amazon.de>

--- a/_includes/carrier-profile.html
+++ b/_includes/carrier-profile.html
@@ -6,7 +6,8 @@
 -->
 
 <div class="summary">
-    <p>I currently work at Intel Labs in Munich, Germany where I focus on software infrastructure for current and future Intel TEEs. In particular, I am one of the maintainers of <a href="https://github.com/gramineproject">the Gramine project</a>, whose SGX backend is used in a variety of confidential computing solutions by companies like IBM. I am also the lead developer of Gramine's TDX backend. Additionally, I am the current maintainer of <a href="https://github.com/CCC-Attestation/interoperable-ra-tls">the Interoperable RA-TLS project</a>.</p>
+    <p>Currently, I work at Amazon Web Services (AWS) in Dresden, Germany, with a focus on kernel and OS security.</p>
+    <p>From 2020 to 2024, I worked at Intel Labs in Munich, Germany where I focused on software infrastructure for current and future Intel TEEs. In particular, I was one of the maintainers of <a href="https://github.com/gramineproject">the Gramine project</a>, whose SGX backend is used in a variety of confidential computing solutions. I was also the lead developer of Gramine's TDX backend. Additionally, I was the current maintainer of <a href="https://github.com/CCC-Attestation/interoperable-ra-tls">the Interoperable RA-TLS project</a>.</p>
     <p>From 2018 to 2020, I worked at Intel Labs in Hillsboro, OR.</p>
     <p>Prior to joining Intel, I was a PhD student at TU Dresden co-supervised by Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia. During my PhD, I interned with Intel Labs (summer 2017). My research focused on dependability of software systems, with emphasis on fault tolerance and security. I defended my PhD thesis titled "Hardware-Assisted Dependable Systems" in early 2018.</p>
     <p></p>
